--- a/index.html
+++ b/index.html
@@ -20,16 +20,27 @@
         <label class="mt-2" for="themeToggle">Modo Escuro:</label>
         <input type="checkbox" id="themeToggle">
 
+        <!-- Dropdown para escolher a região -->
+        <label class="mt-2" for="regiaoDropdown">Escolha a região:</label>
+        <select class="form-control" id="regiaoDropdown">
+            <option value="norte">Norte</option>
+            <option value="nordeste">Nordeste</option>
+            <option value="sudeste">Sudeste</option>
+            <option value="sul">Sul</option>
+            <option value="centro-oeste">Centro-Oeste</option>
+        </select>
+
         <input type="text" id="textInput" class="form-control mt-3" placeholder="Escreva seu texto aqui...">
-        
+
         <div class="btn-group mt-2">
             <button id="ampliarButton" class="btn btn-primary">Ampliar texto</button>
             <button id="corrigirButton" class="btn btn-warning">Corrigir texto</button>
             <button id="copiarButton" class="btn btn-secondary">Copiar texto gerado</button>
-            <!-- Novo botão para detectar região -->
+            <button id="converterRegiaoButton" class="btn btn-success">Converter para Região</button>
+            <!-- Botão para detectar a região -->
             <button id="detectarRegiaoButton" class="btn btn-info">Detectar Região</button>
         </div>
-        
+
         <div class="mt-4" id="gptOutput">
             <span id="loading"></span>
         </div>
@@ -38,6 +49,7 @@
     <script>
         const textInput = $("#textInput");
         const gptOutput = $("#gptOutput");
+        const regiaoDropdown = $("#regiaoDropdown"); // referência para o dropdown
 
         $("#ampliarButton").on("click", () => {
             sendToGPT("amplie esse texto: " + textInput.val());
@@ -56,7 +68,12 @@
             document.body.removeChild(textArea);
         });
 
-        // Função para o novo botão de detectar região
+        // Função para o botão de converter texto conforme região
+        $("#converterRegiaoButton").on("click", () => {
+            sendToGPT("Converta este texto para o estilo da região " + regiaoDropdown.val() + " do Brasil: " + textInput.val());
+        });
+
+        // Função para o botão de detectar região
         $("#detectarRegiaoButton").on("click", () => {
             sendToGPT("Qual região do Brasil esse texto corresponde: " + textInput.val());
         });
