--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="container mt-5" style="min-height: 100vh;"> 
         <h3 style="margin-bottom: 2rem;">BilacBot</h3>
 
-        <div style="display: none;">
+        <div style="">
 
             <label for="apiKeyInput">API Key:</label>
-            <input type="text" value="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" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
+            <input type="text" value="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" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
         </div>
 
         <!-- Dropdown para escolha do modelo -->
@@ -75,7 +75,7 @@
             <span id="gptResult" class="" style="font-size: 1.17rem;"></span>
         </div>
 
-        <div class=" mt-4 gap-5" id="comparisonOutput" style="display: none; gap:5px">
+        <div class=" mt-4 gap-5" id="comparisonOutput" style="display: none; gap:5px; margin-bottom: 8rem;" >
             <div class="w-50 p-3 border" id="originalOutput"></div>
             <div class="w-50 p-3 border" id="correctedOutput"></div>
         </div>
