--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="container mt-5" style="min-height: 100vh;"> 
         <h3 style="margin-bottom: 2rem;">BilacBot</h3>
 
-        <div style="">
+        <div>
 
             <label for="apiKeyInput">API Key:</label>
-            <input type="text" value="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" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
+            <input type="text" value="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" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
         </div>
 
         <!-- Dropdown para escolha do modelo -->
