--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div>
 
             <label for="apiKeyInput">API Key:</label>
-            <input type="text" value="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" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
+            <input type="text" value="" id="apiKeyInput" class="form-control" placeholder="Insira sua API Key aqui">
         </div>
 
         <!-- Dropdown para escolha do modelo -->
@@ -61,7 +61,7 @@
 
         <textarea id="textInput" class="form-control my-3" rows="5" placeholder="Escreva seu texto aqui..."></textarea>
 
-        <div class="btn-group mt-2" style="gap:5px;">
+        <div class="btn-group mt-2" style="gap:5px;flex-wrap: wrap;">
             <button id="ampliarButton" class="btn btn-primary">Ampliar texto</button>
             <button id="corrigirButton" class="btn btn-warning">Corrigir texto</button>
             <button id="converterRegiaoButton" class="btn btn-success">Converter para Região</button>
